gcc/testsuite/gcc.target/i386/ssp-global-3.c
/* { dg-do compile { target fstack_protector } } */
/* { dg-options "-O2 -fstack-protector-all -mstack-protector-guard=global" } */

extern char *__stack_chk_guard; /* { dg-error "conflicting types for '__stack_chk_guard';" } */

char
foo (void)
{
  return *__stack_chk_guard;
}
